# ai-issue-solver

./: .aider.chat.history.md  .aider.input.history  .gitignore  CHANGELOG.md  LICENSE  README.md  README.md.bak  pyproject.toml  requirements-aider.txt  requirements.txt  solver_registry.db  solver_registry.py
.aider.tags.cache.v4/: cache.db
.github/: settings.yml
ais_core/: __init__.py  issue_resolve.py  json_contract.py  repo_resolve.py  run_state.py  secret_filter.py
config/: config.example.env  lifecycle_rules.yaml  role_routing.yaml
docs/: AGENTS.md  BACKLOG.md  CODEX_RESTART_2026-06-11.md  CURRENT_CONTEXT.md  LANGUAGE_POLICY.md  MODEL_OVERRIDE_POLICY.md  NEXT_BACKLOG.md  OPENCODE_APP_STATE.md  PLANNING_0.10.0.md  PLANNING_0.10.0_DESIGN_BRIEF.md  PLANNING_0.9.0.md  PRODUCT_VISION_1.0.md  RASPBERRY_PI.md  RELEASE_NOTES_0.7.0.md  RELEASE_REVIEW_0.7.0.md  RELEASE_REVIEW_AGENDA.md  REPOLENS.md  REPO_HEALTH_2026-06-11.md  REPO_PROFILE_PROVIDER.md  ROADMAP.md  SCRIPT_DETAILS.md  SETUP_AIDER.md  WORKFLOW.md  label_taxonomy.md
prompts/: rework_pr.md
reports/: validation-0.9.0.md
scripts/: analyze_repos.py  benchmark_free_models.py  benchmark_issues.py  build_graph.py  cleanup_backlog.py  create_backlog_issues.py  create_issues.py  create_issues_v2.py  github_summary.py  knowledge_manager.py  label_migration.py  model_catalog.py  model_selection.py  opencode_state_diagnostic.py  plan_issue_batches.py  post_merge_cleanup.py  repo_profile.py  repo_type_detection.py  review_pr.py  rework_workflow.py  role_routing_loader.py  run_overnight.py  run_repolens_docker.sh  (+17 more)
(+209 files in other folders)
