[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-issue-solver"
dynamic = ["version"]
description = "AI-assisted GitHub issue solver"
requires-python = ">=3.10"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
include = ["ais_core*"]
